--- a/etc/emqttd.conf
+++ b/etc/emqttd.conf
@@ -240,7 +240,7 @@
 {module, subscription, [{"$queue/clients/$c", 1}, backend]}.
 
 %% [Rewrite](https://github.com/emqtt/emqttd/wiki/Rewrite)
-{module, rewrite, [{config, "etc/rewrite.conf"}]}.
+{module, rewrite, [{config, "etc/modules/rewrite.conf"}]}.
 
 %%-------------------------------------------------------------------
 %% Erlang System Monitor
