--- a/rel/sys.config
+++ b/rel/sys.config
@@ -32,7 +32,15 @@
         ]}
     ]}
  ]},
- {emqttd, [
-    {gen_conf, "etc/emqttd.conf"}
- ]}
+ {emqttd, [{gen_conf, "etc/emqttd.conf"}]},
+ {emqttd_dashboard, [{gen_conf, "etc/plugins/emqttd_dashboard.conf"}]},
+ {emqttd_recon, [{gen_conf, "etc/plugins/emqttd_recon.conf"}]},
+ {emqttd_reloader, [{gen_conf, "etc/plugins/emqttd_reloader.conf"}]},
+ {emqttd_stomp, [{gen_conf, "etc/plugins/emqttd_stomp.conf"}]},
+ {emqttd_auth_http, [{gen_conf, "etc/plugins/emqttd_auth_http.conf"}]},
+ {emqttd_auth_mongo, [{gen_conf, "etc/plugins/emqttd_auth_mongo.conf"}]},
+ {emqttd_auth_mysql, [{gen_conf, "etc/plugins/emqttd_auth_mysql.conf"}]},
+ {emqttd_auth_pgsql, [{gen_conf, "etc/plugins/emqttd_auth_pgsql.conf"}]},
+ {emqttd_auth_redis, [{gen_conf, "etc/plugins/emqttd_auth_redis.conf"}]},
+ {emqttd_plugin_template, [{gen_conf, "etc/plugins/emqttd_plugin_template.conf"}]}
 ].
