--- a/relx.config
+++ b/relx.config
@@ -46,11 +46,11 @@
 {overlay, [
     {mkdir, "etc/"},
     {mkdir, "etc/ssl/"},
-    {mkdir, "etc/plugins/"},
     {mkdir, "data/"},
     {mkdir, "data/mnesia"},
     {mkdir, "log/"},
     {copy, "etc/plugins", "etc/"},
+    {copy, "etc/modules", "etc/"},
     {copy, "etc/ssl/ssl.crt", "etc/ssl/ssl.crt"},
     {copy, "etc/ssl/ssl.key", "etc/ssl/ssl.key"},
 
@@ -63,7 +63,6 @@
     {template, "etc/acl.conf", "etc/acl.conf"},
     {template, "etc/client.conf", "etc/client.conf"},
     {template, "etc/emqttd.conf", "etc/emqttd.conf"},
-    {template, "etc/passwd.conf", "etc/passwd.conf"},
-    {template, "etc/rewrite.conf", "etc/rewrite.conf"}
+    {template, "etc/passwd.conf", "etc/passwd.conf"}
 ]}.
 
