--- a/rel/sys.config
+++ b/rel/sys.config
@@ -1,8 +1,7 @@
 % -*- mode: erlang;erlang-indent-level: 4;indent-tabs-mode: nil -*-
 %% ex: ft=erlang ts=4 sw=4 et
 [{kernel, [
-    {start_timer, true},
-    {start_pg2, true}
+    {start_timer, true}, {start_pg2, true}
  ]},
  {sasl, [
     {sasl_error_logger, {file, "log/emqttd_sasl.log"}}
@@ -33,11 +32,12 @@
     ]}
  ]},
  {emqttd, [{gen_conf, "etc/emqttd.conf"}]},
- {emqttd_dashboard, [{gen_conf, "etc/plugins/emqttd_dashboard.conf"}]},
- {emqttd_recon, [{gen_conf, "etc/plugins/emqttd_recon.conf"}]},
- {emqttd_reloader, [{gen_conf, "etc/plugins/emqttd_reloader.conf"}]},
- {emqttd_stomp, [{gen_conf, "etc/plugins/emqttd_stomp.conf"}]},
- {emqttd_auth_http, [{gen_conf, "etc/plugins/emqttd_auth_http.conf"}]},
+ %% Plugins
+ {emqttd_dashboard,  [{gen_conf, "etc/plugins/emqttd_dashboard.conf"}]},
+ {emqttd_recon,      [{gen_conf, "etc/plugins/emqttd_recon.conf"}]},
+ {emqttd_reloader,   [{gen_conf, "etc/plugins/emqttd_reloader.conf"}]},
+ {emqttd_stomp,      [{gen_conf, "etc/plugins/emqttd_stomp.conf"}]},
+ {emqttd_auth_http,  [{gen_conf, "etc/plugins/emqttd_auth_http.conf"}]},
  {emqttd_auth_mongo, [{gen_conf, "etc/plugins/emqttd_auth_mongo.conf"}]},
  {emqttd_auth_mysql, [{gen_conf, "etc/plugins/emqttd_auth_mysql.conf"}]},
  {emqttd_auth_pgsql, [{gen_conf, "etc/plugins/emqttd_auth_pgsql.conf"}]},
