--- a/etc/emqttd.conf
+++ b/etc/emqttd.conf
@@ -31,10 +31,10 @@
 {auth, anonymous, []}.
 
 %% Authentication with username, password
-{auth, username, [{passwd, "etc/passwd.conf"}]}.
+{auth, username, [{passwd, "etc/modules/passwd.conf"}]}.
 
 %% Authentication with clientId
-{auth, clientid, [{config, "etc/client.conf"}, {password, no}]}.
+{auth, clientid, [{config, "etc/modules/client.conf"}, {password, no}]}.
 
 %%--------------------------------------------------------------------
 %% ACL
@@ -42,7 +42,7 @@
 
 {acl, anonymous, []}.
 
-{acl, internal, [{config, "etc/acl.conf"}, {nomatch, allow}]}.
+{acl, internal, [{config, "etc/modules/acl.conf"}, {nomatch, allow}]}.
 
 %% Cache ACL result for PUBLISH
 {cache_acl, true}.
