--- a/relx.config
+++ b/relx.config
@@ -53,16 +53,12 @@
     {copy, "etc/modules", "etc/"},
     {copy, "etc/ssl/ssl.crt", "etc/ssl/ssl.crt"},
     {copy, "etc/ssl/ssl.key", "etc/ssl/ssl.key"},
+    {template, "etc/emqttd.conf", "etc/emqttd.conf"},
 
     {template, "bin/emqttd", "bin/emqttd"},
     {template, "bin/emqttd_ctl", "bin/emqttd_ctl"},
     {copy, "bin/nodetool", "bin/nodetool"},
     {copy, "bin/nodetool", "erts-\{\{erts_vsn\}\}/bin/nodetool"},
-    {copy, "bin/install_upgrade_escript", "bin/install_upgrade_escript"},
-
-    {template, "etc/acl.conf", "etc/acl.conf"},
-    {template, "etc/client.conf", "etc/client.conf"},
-    {template, "etc/emqttd.conf", "etc/emqttd.conf"},
-    {template, "etc/passwd.conf", "etc/passwd.conf"}
+    {copy, "bin/install_upgrade_escript", "bin/install_upgrade_escript"}
 ]}.
 
