--- a/etc/emqttd.conf
+++ b/etc/emqttd.conf
@@ -237,7 +237,7 @@
 {module, presence, [{qos, 0}]}.
 
 %% Subscribe topics automatically when client connected
-{module, subscription, [{"$queue/clients/$c", 1}, backend]}.
+{module, subscription, [{"$clients/$c", 1}]}.
 
 %% [Rewrite](https://github.com/emqtt/emqttd/wiki/Rewrite)
 {module, rewrite, [{config, "etc/modules/rewrite.conf"}]}.
