--- a/etc/emqttd.conf
+++ b/etc/emqttd.conf
@@ -201,6 +201,8 @@
 %% PubSub and Router. Default should be scheduler numbers.
 {pubsub_pool_size, 8}.
 
+{pubsub_adapter, emqttd_pubsub}.
+
 %%--------------------------------------------------------------------
 %% Routing
 %%--------------------------------------------------------------------
