emqtt_sn, emqtt_coap

--- a/relx.config
+++ b/relx.config
@@ -30,6 +30,8 @@
   {emqttd_auth_mysql, load},
   {emqttd_auth_pgsql, load},
   {emqttd_auth_redis, load},
+  {emqtt_sn, load},
+  {emqtt_coap, load},
   {emqttd_plugin_template, load}
 ]}.
 
