--- a/etc/emqttd.conf
+++ b/etc/emqttd.conf
@@ -192,10 +192,13 @@
 %% PubSub
 %%--------------------------------------------------------------------
 
-%% PubSub and Router. Default should be scheduler numbers.
+%% PubSub Pool Size. Default should be scheduler numbers.
 {pubsub_pool_size, 8}.
 
+%% PubSub Adapter
 {pubsub_adapter, emqttd_pubsub}.
+
+{pubsub_by_clientid, true}.
 
 %%--------------------------------------------------------------------
 %% Routing
@@ -233,7 +236,7 @@
 {module, presence, [{qos, 0}]}.
 
 %% Subscribe topics automatically when client connected
-{module, subscription, [{"$clients/$c", 1}]}.
+{module, subscription, [{"$client/$c", 1}]}.
 
 %% [Rewrite](https://github.com/emqtt/emqttd/wiki/Rewrite)
 {module, rewrite, [{config, "etc/modules/rewrite.conf"}]}.
