emqttd_sn, emqttd_coap

--- a/relx.config
+++ b/relx.config
@@ -21,17 +21,17 @@
   mochiweb,
   {mnesia, load},
   emqttd,
+  {emqttd_sn, load},
+  {emqttd_coap, load},
   {emqttd_recon, load},
+  {emqttd_stomp, load},
   {emqttd_reloader, load},
   {emqttd_dashboard, load},
-  {emqttd_stomp, load},
   {emqttd_auth_http, load},
   {emqttd_auth_mongo, load},
   {emqttd_auth_mysql, load},
   {emqttd_auth_pgsql, load},
   {emqttd_auth_redis, load},
-  {emqtt_sn, load},
-  {emqtt_coap, load},
   {emqttd_plugin_template, load}
 ]}.
 
