{pubsub_async, true}

--- a/etc/emqttd.conf
+++ b/etc/emqttd.conf
@@ -197,11 +197,14 @@
 
 {pubsub_by_clientid, true}.
 
+%% Subscribe Asynchronously
+{pubsub_async, true}.
+
 %%--------------------------------------------------------------------
 %% Routing
 %%--------------------------------------------------------------------
 
-%% Route aging time(seconds)
+%% TODO: Route aging time(seconds)
 {routing_age, 5}.
 
 %%--------------------------------------------------------------------
