--- a/relx.config
+++ b/relx.config
@@ -55,7 +55,8 @@
     {copy, "etc/modules", "etc/"},
     {copy, "etc/ssl/ssl.crt", "etc/ssl/ssl.crt"},
     {copy, "etc/ssl/ssl.key", "etc/ssl/ssl.key"},
-    {template, "etc/emqttd.conf", "etc/emqttd.conf"},
+    {copy, "etc/emqttd.conf", "etc/emqttd.conf"},
+    {copy, "data/loaded_plugins", "data/loaded_plugins"},
 
     {template, "bin/emqttd", "bin/emqttd"},
     {template, "bin/emqttd_ctl", "bin/emqttd_ctl"},
