secure mount_point

--- a/etc/emqttd.conf
+++ b/etc/emqttd.conf
@@ -156,6 +156,9 @@
     %% Maximum number of concurrent clients
     {max_clients, 512},
 
+    %% Mount point prefix
+    %% {mount_point, "secure/"},
+
     %% Socket Access Control
     {access, [{allow, all}]},
 
