--- a/relx.config
+++ b/relx.config
@@ -1,5 +1,5 @@
 
-{release, {emqttd, "2.0.0"}, [
+{release, {emqttd, "2.0"}, [
   sasl,
   os_mon,
   asn1,
@@ -13,7 +13,7 @@
   compiler,
   runtime_tools,
   {observer, load},
-  {wx, load},
+  %%{wx, load},
   lager,
   gen_logger,
   gproc,
@@ -22,11 +22,12 @@
   {mnesia, load},
   emqttd,
   {emqttd_sn, load},
-  {emqttd_coap, load},
+  %%{emqttd_coap, load},
   {emqttd_recon, load},
   {emqttd_stomp, load},
   {emqttd_reloader, load},
   {emqttd_dashboard, load},
+  {emqttd_auth_ldap, load},
   {emqttd_auth_http, load},
   {emqttd_auth_mongo, load},
   {emqttd_auth_mysql, load},
@@ -37,7 +38,7 @@
 
 {include_src, false}.
 
-{extended_start_script, false}.
+{extended_start_script, true}.
 
 {sys_config, "rel/sys.config"}.
 
@@ -58,6 +59,7 @@
     {copy, "etc/emqttd.conf", "etc/emqttd.conf"},
     {copy, "data/loaded_plugins", "data/loaded_plugins"},
 
+    {template, "rel/vm.args", "etc/vm.args"},
     {template, "bin/emqttd", "bin/emqttd"},
     {template, "bin/emqttd_ctl", "bin/emqttd_ctl"},
     {copy, "bin/nodetool", "bin/nodetool"},
