--- a/etc/emqttd.conf
+++ b/etc/emqttd.conf
@@ -55,19 +55,6 @@
 {broker_sys_interval, 60}.
 
 %%--------------------------------------------------------------------
-%% Retained message
-%%--------------------------------------------------------------------
-
-%% Expired after seconds, never expired if 0
-{retained_expired_after, 0}.
-
-%% Max number of retained messages
-{retained_max_message_num, 100000}.
-
-%% Max Payload Size of retained message
-{retained_max_playload_size, 65536}.
-
-%%--------------------------------------------------------------------
 %% Session
 %%--------------------------------------------------------------------
 
@@ -204,13 +191,6 @@
 {pubsub_async, true}.
 
 %%--------------------------------------------------------------------
-%% Routing
-%%--------------------------------------------------------------------
-
-%% TODO: Route aging time(seconds)
-{routing_age, 5}.
-
-%%--------------------------------------------------------------------
 %% Bridge
 %%--------------------------------------------------------------------
 
@@ -233,6 +213,23 @@
 %%--------------------------------------------------------------------
 %% Modules
 %%--------------------------------------------------------------------
+
+%% Retainer Module
+{module, retainer, [
+
+    %% disc: disc_copies, ram: ram_copies
+    {storage, disc},
+
+    %% Max number of retained messages
+    {max_message_num, 100000},
+
+    %% Max Payload Size of retained message
+    {max_playload_size, 65536},
+
+    %% Expired after seconds, never expired if 0
+    {expired_after, 0}
+
+]}.
 
 %% Client presence management module. Publish presence messages when 
 %% client connected or disconnected.
