--- a/etc/emqttd.conf
+++ b/etc/emqttd.conf
@@ -236,7 +236,7 @@
 {module, presence, [{qos, 0}]}.
 
 %% Subscribe topics automatically when client connected
-{module, subscription, [{"$client/$c", 1}]}.
+{module, subscription, [{"$client/%c", 1}]}.
 
 %% [Rewrite](https://github.com/emqtt/emqttd/wiki/Rewrite)
 {module, rewrite, [{config, "etc/modules/rewrite.conf"}]}.
