--- a/etc/emqttd.conf
+++ b/etc/emqttd.conf
@@ -239,7 +239,7 @@
 {module, subscription, [{"$client/%c", 1}]}.
 
 %% [Rewrite](https://github.com/emqtt/emqttd/wiki/Rewrite)
-{module, rewrite, [{config, "etc/modules/rewrite.conf"}]}.
+%% {module, rewrite, [{config, "etc/modules/rewrite.conf"}]}.
 
 %%-------------------------------------------------------------------
 %% Erlang System Monitor
