add emqttd_coap plugin

--- a/relx.config
+++ b/relx.config
@@ -22,7 +22,7 @@
   {mnesia, load},
   emqttd,
   {emqttd_sn, load},
-  %%{emqttd_coap, load},
+  {emqttd_coap, load},
   {emqttd_recon, load},
   {emqttd_stomp, load},
   {emqttd_reloader, load},
