--- a/etc/emqttd.conf
+++ b/etc/emqttd.conf
@@ -218,7 +218,7 @@
 {module, retainer, [
 
     %% disc: disc_copies, ram: ram_copies
-    {storage, disc},
+    {storage_type, disc},
 
     %% Max number of retained messages
     {max_message_num, 100000},
