ssl handshake_timeout

--- a/etc/emqttd.conf
+++ b/etc/emqttd.conf
@@ -150,7 +150,8 @@
     {access, [{allow, all}]},
 
     %% SSL certificate and key files
-    {ssl, [{certfile, "etc/ssl/ssl.crt"},
+    {ssl, [{handshake_timeout, 10000},
+           {certfile, "etc/ssl/ssl.crt"},
            {keyfile,  "etc/ssl/ssl.key"}]},
 
     %% Socket Options
