add emqttd_coap, emqttd_sn, emqttd_auth_ldap conf

--- a/rel/sys.config
+++ b/rel/sys.config
@@ -31,15 +31,18 @@
         ]}
     ]}
  ]},
- {emqttd, [{conf, "etc/emqttd.conf"}]},
- {emqttd_dashboard, [{conf, "etc/plugins/emqttd_dashboard.conf"}]},
- {emqttd_recon, [{conf, "etc/plugins/emqttd_recon.conf"}]},
- {emqttd_reloader, [{conf, "etc/plugins/emqttd_reloader.conf"}]},
- {emqttd_stomp, [{conf, "etc/plugins/emqttd_stomp.conf"}]},
- {emqttd_auth_http,  [{conf, "etc/plugins/emqttd_auth_http.conf"}]},
- {emqttd_auth_mongo, [{conf, "etc/plugins/emqttd_auth_mongo.conf"}]},
- {emqttd_auth_mysql, [{conf, "etc/plugins/emqttd_auth_mysql.conf"}]},
- {emqttd_auth_pgsql, [{conf, "etc/plugins/emqttd_auth_pgsql.conf"}]},
- {emqttd_auth_redis, [{conf, "etc/plugins/emqttd_auth_redis.conf"}]},
+ {emqttd,                 [{conf, "etc/emqttd.conf"}]},
+ {emqttd_auth_http,       [{conf, "etc/plugins/emqttd_auth_http.conf"}]},
+ {emqttd_auth_ldap,       [{conf, "etc/plugins/emqttd_auth_ldap.conf"}]},
+ {emqttd_auth_mongo,      [{conf, "etc/plugins/emqttd_auth_mongo.conf"}]},
+ {emqttd_auth_mysql,      [{conf, "etc/plugins/emqttd_auth_mysql.conf"}]},
+ {emqttd_auth_pgsql,      [{conf, "etc/plugins/emqttd_auth_pgsql.conf"}]},
+ {emqttd_auth_redis,      [{conf, "etc/plugins/emqttd_auth_redis.conf"}]},
+ {emqttd_coap,            [{conf, "etc/plugins/emqttd_coap.conf"}]},
+ {emqttd_dashboard,       [{conf, "etc/plugins/emqttd_dashboard.conf"}]},
+ {emqttd_recon,           [{conf, "etc/plugins/emqttd_recon.conf"}]},
+ {emqttd_reloader,        [{conf, "etc/plugins/emqttd_reloader.conf"}]},
+ {emqttd_sn,              [{conf, "etc/plugins/emqttd_sn.conf"}]},
+ {emqttd_stomp,           [{conf, "etc/plugins/emqttd_stomp.conf"}]},
  {emqttd_plugin_template, [{conf, "etc/plugins/emqttd_plugin_template.conf"}]}
 ].
