add Mutual SSL Authentication option

--- a/etc/emqttd.conf
+++ b/etc/emqttd.conf
@@ -151,6 +151,9 @@
 
     %% SSL certificate and key files
     {ssl, [{handshake_timeout, 10000},
+           %% Mutual SSL Authentication option
+           %% {verify, verify_peer},
+           %% {cacertfile, "etc/ssl/ca.pem"},
            {certfile, "etc/ssl/ssl.crt"},
            {keyfile,  "etc/ssl/ssl.key"}]},
 
