--- a/relx.config
+++ b/relx.config
@@ -21,19 +21,19 @@
   mochiweb,
   {mnesia, load},
   emqttd,
-  {emqttd_sn, load},
-  {emqttd_coap, load},
-  {emqttd_recon, load},
-  {emqttd_stomp, load},
-  {emqttd_reloader, load},
-  {emqttd_dashboard, load},
-  {emqttd_auth_ldap, load},
-  {emqttd_auth_http, load},
-  {emqttd_auth_mongo, load},
-  {emqttd_auth_mysql, load},
-  {emqttd_auth_pgsql, load},
-  {emqttd_auth_redis, load},
-  {emqttd_plugin_template, load}
+  {emq_sn, load},
+  {emq_coap, load},
+  {emq_recon, load},
+  {emq_stomp, load},
+  {emq_reloader, load},
+  {emq_dashboard, load},
+  {emq_auth_ldap, load},
+  {emq_auth_http, load},
+  {emq_auth_mongo, load},
+  {emq_auth_mysql, load},
+  {emq_auth_pgsql, load},
+  {emq_auth_redis, load},
+  {emq_plugin_template, load}
 ]}.
 
 {include_src, false}.
