emq30 - merge and generate app.config

--- a/relx.config
+++ b/relx.config
@@ -1,7 +1,6 @@
 
-{release, {emqttd, "2.0"}, [
+{release, {emqttd, "3.0"}, [
   sasl,
-  os_mon,
   asn1,
   syntax_tools,
   ssl,
@@ -40,16 +39,17 @@
 
 {extended_start_script, true}.
 
-{sys_config, "rel/sys.config"}.
+{sys_config, false}.
 
-{vm_args, "rel/vm.args"}.
+{vm_args, false}.
 
-{overlay_vars, "./rel/vars.config"}.
+{overlay_vars, "vars.config"}.
 
 {overlay, [
     {mkdir, "etc/"},
     {mkdir, "etc/ssl/"},
     {mkdir, "data/"},
+    {mkdir, "data/configs"},
     {mkdir, "data/mnesia"},
     {mkdir, "log/"},
     {copy, "etc/plugins", "etc/"},
