Improve the release process

--- a/relx.config
+++ b/relx.config
@@ -37,7 +37,7 @@
 
 {include_src, false}.
 
-{extended_start_script, true}.
+{extended_start_script, false}.
 
 {sys_config, false}.
 
@@ -47,22 +47,18 @@
 
 {overlay, [
     {mkdir, "etc/"},
-    {mkdir, "etc/ssl/"},
-    {mkdir, "data/"},
-    {mkdir, "data/configs"},
-    {mkdir, "data/mnesia"},
     {mkdir, "log/"},
-    {copy, "etc/plugins", "etc/"},
-    {copy, "etc/modules", "etc/"},
-    {copy, "etc/ssl/ssl.crt", "etc/ssl/ssl.crt"},
-    {copy, "etc/ssl/ssl.key", "etc/ssl/ssl.key"},
-    {copy, "etc/emqttd.conf", "etc/emqttd.conf"},
-    {copy, "data/loaded_plugins", "data/loaded_plugins"},
-
+    {mkdir, "data/"},
+    {mkdir, "data/mnesia"},
+    {mkdir, "data/configs"},
     {template, "bin/emqttd", "bin/emqttd"},
     {template, "bin/emqttd_ctl", "bin/emqttd_ctl"},
+    {copy, "rel/conf/plugins", "etc/"},
+    {copy, "rel/conf/emq.conf", "etc/emq.conf"},
+    {copy, "data/loaded_plugins", "data/loaded_plugins"},
+    {copy, "bin/cuttlefish", "bin/cuttlefish"},
     {copy, "bin/nodetool", "bin/nodetool"},
-    {copy, "bin/nodetool", "erts-\{\{erts_vsn\}\}/bin/nodetool"},
+    {copy, "rel/schema", "releases/\{\{rel_vsn\}\}/"},
     {copy, "bin/install_upgrade_escript", "bin/install_upgrade_escript"}
 ]}.
 
