emq_mod_rewrite, ssl

--- a/relx.config
+++ b/relx.config
@@ -56,6 +56,7 @@
     {template, "bin/emqttd", "bin/emqttd"},
     {template, "bin/emqttd_ctl", "bin/emqttd_ctl"},
     {copy, "rel/conf/plugins", "etc/"},
+    {copy, "deps/emqttd/etc/ssl", "etc/"},
     {copy, "rel/conf/emq.conf", "etc/emq.conf"},
     {copy, "data/loaded_plugins", "data/loaded_plugins"},
     {copy, "bin/cuttlefish", "bin/cuttlefish"},
