*conf*, emq_mod_rewrite

--- a/relx.config
+++ b/relx.config
@@ -26,6 +26,7 @@
   {emq_stomp, load},
   {emq_reloader, load},
   {emq_dashboard, load},
+  {emq_mod_rewrite, load},
   {emq_auth_ldap, load},
   {emq_auth_http, load},
   {emq_auth_mongo, load},
