add emq_auth_clientid, emq_auth_username

--- a/relx.config
+++ b/relx.config
@@ -27,6 +27,8 @@
   {emq_reloader, load},
   {emq_dashboard, load},
   {emq_mod_rewrite, load},
+  {emq_auth_clientid, load},
+  {emq_auth_username, load},
   {emq_auth_ldap, load},
   {emq_auth_http, load},
   {emq_auth_mongo, load},
@@ -59,6 +61,7 @@
     {copy, "rel/conf/plugins", "etc/"},
     {copy, "deps/emqttd/etc/ssl", "etc/"},
     {copy, "rel/conf/emq.conf", "etc/emq.conf"},
+    {copy, "rel/conf/acl.conf", "etc/acl.conf"},
     {copy, "data/loaded_plugins", "data/loaded_plugins"},
     {copy, "bin/cuttlefish", "bin/cuttlefish"},
     {copy, "bin/nodetool", "bin/nodetool"},
