--- a/relx.config
+++ b/relx.config
@@ -56,6 +56,7 @@
     {mkdir, "data/"},
     {mkdir, "data/mnesia"},
     {mkdir, "data/configs"},
+    {template, "bin/emqenv", "bin/emqenv"},
     {template, "bin/emqttd", "bin/emqttd"},
     {template, "bin/emqttd_ctl", "bin/emqttd_ctl"},
     {copy, "rel/conf/plugins", "etc/"},
