--- a/relx.config
+++ b/relx.config
@@ -60,7 +60,7 @@
     {template, "bin/emqttd", "bin/emqttd"},
     {template, "bin/emqttd_ctl", "bin/emqttd_ctl"},
     {copy, "rel/conf/plugins", "etc/"},
-    {copy, "deps/emqttd/etc/ssl", "etc/"},
+    {copy, "deps/emqttd/etc/certs", "etc/"},
     {copy, "rel/conf/emq.conf", "etc/emq.conf"},
     {copy, "rel/conf/acl.conf", "etc/acl.conf"},
     {copy, "data/loaded_plugins", "data/loaded_plugins"},
