--- a/relx.config
+++ b/relx.config
@@ -27,6 +27,9 @@
   {emq_reloader, load},
   {emq_dashboard, load},
   {emq_mod_rewrite, load},
+  {emq_mod_presence, load},
+  {emq_mod_retainer, load},
+  {emq_mod_subscription, load},
   {emq_auth_clientid, load},
   {emq_auth_username, load},
   {emq_auth_ldap, load},
