create emq package branch

--- a/vars.config
+++ b/vars.config
@@ -12,9 +12,12 @@
 %% bin/emqttd
 %% 
 %% {runner_script_dir,  "$(cd ${0%/*} && pwd)"}.
+{runner_root_dir,    "/lib64/emqttd"}.
+{runner_bin_dir,     "/usr/sbin/"}.
 {runner_base_dir,    "${RUNNER_SCRIPT_DIR%/*}"}.
-{runner_etc_dir,     "$RUNNER_BASE_DIR/etc"}.
-{runner_log_dir,     "$RUNNER_BASE_DIR/log"}.
+{runner_etc_dir,     "/etc/emqttd"}.
+{runner_log_dir,     "/var/log/emqttd"}.
+{runner_data_dir,    "/var/lib/emqttd"}.
 {pipe_dir,           "/tmp/$RUNNER_SCRIPT/"}.
 {runner_user,        ""}.
 
