--- a/relx.config
+++ b/relx.config
@@ -67,7 +67,7 @@
     {template, "bin/emqttd_ctl.cmd", "bin/emqttd_ctl.cmd"},
     {copy, "rel/conf/plugins", "etc/"},
     {copy, "deps/emqttd/etc/certs", "etc/"},
-    {copy, "rel/conf/emq.conf", "etc/emq.conf"},
+    {template, "rel/conf/emq.conf", "etc/emq.conf"},
     {copy, "rel/conf/acl.conf", "etc/acl.conf"},
     {copy, "data/loaded_plugins", "data/loaded_plugins"},
     {copy, "bin/cuttlefish", "bin/cuttlefish"},
