config runner_root_dir

--- a/vars.config
+++ b/vars.config
@@ -12,9 +12,9 @@
 %% bin/emqttd
 %% 
 %% {runner_script_dir,  "$(cd ${0%/*} && pwd)"}.
-{runner_root_dir,    ""}.
+{runner_root_dir,    "/url/lib64/emqttd"}.
 {runner_base_dir,    ""}.
-{runner_bin_dir,     "/usr/lib64/bin/"}.
+{runner_bin_dir,     "/usr/sbin/"}.
 {runner_etc_dir,     "/etc/emqttd"}.
 {runner_lib_dir,     "$RUNNER_ROOT_DIR/lib"}.
 {runner_log_dir,     "/var/log/emqttd"}.
