compatible /usr/lib64 and /usr/lib

--- a/vars.config
+++ b/vars.config
@@ -11,14 +11,15 @@
 %%
 %% bin/emqttd
 %% 
-%% {runner_script_dir,  "$(cd ${0%/*} && pwd)"}.
-{runner_root_dir,    "/url/lib64/emqttd"}.
-{runner_base_dir,    ""}.
-{runner_bin_dir,     "/usr/sbin/"}.
-{runner_etc_dir,     "/etc/emqttd"}.
-{runner_lib_dir,     "$RUNNER_ROOT_DIR/lib"}.
-{runner_log_dir,     "/var/log/emqttd"}.
-{runner_data_dir,    "/var/lib/emqttd"}.
-{pipe_dir,           "/tmp/$RUNNER_SCRIPT/"}.
-{runner_user,        ""}.
+%% {runner_script_dir,   "$(cd ${0%/*} && pwd)"}.
+{runner_root_dir,        "/usr/lib/emqttd"}.
+{runner_root_dir_for_64, "/usr/lib64/emqttd"}.
+{runner_base_dir,        ""}.
+{runner_bin_dir,         "/usr/sbin"}.
+{runner_etc_dir,         "/etc/emqttd"}.
+{runner_lib_dir,         "$RUNNER_ROOT_DIR/lib"}.
+{runner_log_dir,         "/var/log/emqttd"}.
+{runner_data_dir,        "/var/lib/emqttd"}.
+{pipe_dir,               "/tmp/$RUNNER_SCRIPT/"}.
+{runner_user,            ""}.
 
