--- a/vars.config
+++ b/vars.config
@@ -12,8 +12,8 @@
 %% bin/emqttd
 %% 
 %% {runner_script_dir,   "$(cd ${0%/*} && pwd)"}.
-{runner_root_dir,        "/usr/lib/emqttd"}.
-{runner_root_dir_for_64, "/usr/lib64/emqttd"}.
+{runner_root_dir,        "/lib/emqttd"}.
+{runner_root_dir_for_64, "/lib64/emqttd"}.
 {runner_base_dir,        ""}.
 {runner_bin_dir,         "/usr/sbin"}.
 {runner_etc_dir,         "/etc/emqttd"}.
