--- a/relx.config
+++ b/relx.config
@@ -1,5 +1,5 @@
 
-{release, {emqttd, "2.1"}, [
+{release, {emqttd, "2.0.7"}, [
   sasl,
   asn1,
   syntax_tools,
@@ -15,7 +15,6 @@
   %%{wx, load},
   pbkdf2,
   lager,
-  syslog,
   gen_logger,
   gproc,
   esockd,
@@ -26,10 +25,12 @@
   {emq_coap, load},
   {emq_recon, load},
   {emq_stomp, load},
-  {emq_modules, load},
-  {emq_retainer, load},
   {emq_reloader, load},
   {emq_dashboard, load},
+  {emq_mod_rewrite, load},
+  {emq_mod_presence, load},
+  {emq_mod_retainer, load},
+  {emq_mod_subscription, load},
   {emq_auth_clientid, load},
   {emq_auth_username, load},
   {emq_auth_ldap, load},
