--- a/.ci/debian7/Dockerfile
+++ b/.ci/debian7/Dockerfile
@@ -5,6 +5,7 @@ RUN apt-get install -y wget git zip  build-essential debhelper
 RUN wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_19.1.3-1~debian~wheezy_amd64.deb -O /tmp/erlang.deb
 RUN dpkg -i /tmp/erlang.deb || true
 RUN apt-get -f install -y
+RUN mkdir -p /rebar && git clone https://github.com/rebar/rebar && cd /rebar && ./bootstrap && cp /rebar/rebar /usr/local/bin/ && rm -rf /rebar
 RUN mkdir -p /root/.ssh/
 # cleanup
 RUN apt-get clean\
