--- a/vars.config
+++ b/vars.config
@@ -14,7 +14,7 @@
 %% {runner_script_dir,  "$(cd ${0%/*} && pwd)"}.
 {runner_root_dir,    ""}.
 {runner_base_dir,    ""}.
-{runner_bin_dir,     "$RUNNER_ROOT_DIR/bin/"}.
+{runner_bin_dir,     "$RUNNER_ROOT_DIR/bin"}.
 {runner_etc_dir,     "$RUNNER_ROOT_DIR/etc"}.
 {runner_lib_dir,     "$RUNNER_ROOT_DIR/lib"}.
 {runner_log_dir,     "$RUNNER_ROOT_DIR/log"}.
