Deps add lua_hook

--- a/relx.config
+++ b/relx.config
@@ -32,6 +32,7 @@
   {emq_reloader, load},
   {emq_dashboard, load},
   {emq_web_hook, load},
+  {emq_lua_hook, load},
   {emq_auth_clientid, load},
   {emq_auth_username, load},
   {emq_auth_ldap, load},
