Put luerl into relx.config.

--- a/relx.config
+++ b/relx.config
@@ -16,6 +16,7 @@
   pbkdf2,
   bcrypt,
   lager,
+  luerl,
   syslog,
   gen_logger,
   gproc,
@@ -62,6 +63,7 @@
     {mkdir, "data/"},
     {mkdir, "data/mnesia"},
     {mkdir, "data/configs"},
+    {mkdir, "hook_lua"},
     {template, "bin/emqenv", "bin/emqenv"},
     {template, "bin/emqttd", "bin/emqttd"},
     {template, "bin/emqttd_ctl", "bin/emqttd_ctl"},
