--- a/relx.config
+++ b/relx.config
@@ -1,5 +1,5 @@
 
-{release, {emqttd, "2.1.2"}, [
+{release, {emqttd, "2.2"}, [
   sasl,
   asn1,
   syntax_tools,
@@ -14,7 +14,9 @@
   {observer, load},
   %%{wx, load},
   pbkdf2,
+  bcrypt,
   lager,
+  luerl,
   syslog,
   gen_logger,
   gproc,
@@ -30,6 +32,8 @@
   {emq_retainer, load},
   {emq_reloader, load},
   {emq_dashboard, load},
+  {emq_web_hook, load},
+  {emq_lua_hook, load},
   {emq_auth_clientid, load},
   {emq_auth_username, load},
   {emq_auth_ldap, load},
@@ -59,6 +63,7 @@
     {mkdir, "data/"},
     {mkdir, "data/mnesia"},
     {mkdir, "data/configs"},
+    {mkdir, "hook_lua"},
     {template, "bin/emqenv", "bin/emqenv"},
     {template, "bin/emqttd", "bin/emqttd"},
     {template, "bin/emqttd_ctl", "bin/emqttd_ctl"},
