--- a/relx.config
+++ b/relx.config
@@ -36,6 +36,7 @@
   {emq_dashboard, load},
   {emq_web_hook, load},
   {emq_lua_hook, load},
+  {emq_elixir_plugin, load},
   {emq_auth_clientid, load},
   {emq_auth_username, load},
   {emq_auth_ldap, load},
