Integrate with ekka library

--- a/relx.config
+++ b/relx.config
@@ -1,5 +1,5 @@
 
-{release, {emqttd, "2.2"}, [
+{release, {emqttd, "2.3"}, [
   sasl,
   asn1,
   syntax_tools,
@@ -23,6 +23,7 @@
   esockd,
   mochiweb,
   {mnesia, load},
+  {ekka, load},
   emqttd,
   {emq_sn, load},
   {emq_coap, load},
