Add JWT authentication plugin

--- a/relx.config
+++ b/relx.config
@@ -45,6 +45,7 @@
   {emq_auth_mysql, load},
   {emq_auth_pgsql, load},
   {emq_auth_redis, load},
+  {emq_auth_jwt, load},
   {emq_plugin_template, load}
 ]}.
 
