--- a/.ci/debian7/Dockerfile
+++ b/.ci/debian7/Dockerfile
@@ -1,15 +1,12 @@
 FROM debian:7
 
 RUN apt-get update
-RUN apt-get install -y wget git zip  build-essential debhelper
-RUN wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_19.1.3-1~debian~wheezy_amd64.deb -O /tmp/erlang.deb
-RUN dpkg -i /tmp/erlang.deb || true
-RUN apt-get -f install -y
-RUN mkdir -p /rebar && git clone https://github.com/rebar/rebar && cd /rebar && ./bootstrap && cp /rebar/rebar /usr/local/bin/ && rm -rf /rebar
+RUN apt-get install -y wget git zip  build-essential debhelper libncurses5-dev unixodbc unixodbc-dev openjdk-7-jdk libssl-dev
+RUN wget http://erlang.org/download/otp_src_20.0.tar.gz &&  tar zxvf otp_src_20.0.tar.gz && cd otp_src_20.0 && ./configure && make && make install
 RUN mkdir -p /root/.ssh/
 # cleanup
 RUN apt-get clean\
- && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+ && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /otp_src_20.0/* /otp_src_20.0.tar.gz
 
 ADD ./files/id_rsa /root/.ssh/
 ADD ./files/id_rsa.pub /root/.ssh/
