--- a/.ci/debian9/Dockerfile
+++ b/.ci/debian9/Dockerfile
@@ -1,10 +1,8 @@
-FROM ubuntu:16.04
+ROM debian:9
 
 RUN apt-get update
-RUN apt-get install -y wget git zip
-RUN apt-get update
-RUN apt-get install -y build-essential debhelper
-RUN wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_20.0-1~ubuntu~trusty_amd64.deb -O /tmp/erlang.deb
+RUN apt-get install -y wget git zip  build-essential debhelper
+RUN wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_20.0-1~debian~stretch_amd64.deb -O /tmp/erlang.deb
 RUN dpkg -i /tmp/erlang.deb || true
 RUN apt-get -f install -y
 RUN mkdir -p /root/.ssh/
