--- a/.ci/ubuntu14.04/Dockerfile
+++ b/.ci/ubuntu14.04/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get install -y wget git zip
 RUN echo >> deb http://security.ubuntu.com/ubuntu precise-security main /etc/apt/sources.list
 RUN apt-get update
 RUN apt-get install -y build-essential debhelper
-RUN wget http://packages.erlang-solutions.com/erlang/esl-erlang/FLAVOUR_1_general/esl-erlang_19.1.3-1~ubuntu~precise_amd64.deb -O /tmp/erlang.deb
+RUN wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_20.0-1~ubuntu~trusty_amd64.deb -O /tmp/erlang.deb
 RUN dpkg -i /tmp/erlang.deb || true
 RUN apt-get -f install -y
 RUN mkdir -p /rebar && git clone https://github.com/rebar/rebar && cd /rebar && ./bootstrap && cp /rebar/rebar /usr/local/bin/ && rm -rf /rebar
