--- a/relx.config
+++ b/relx.config
@@ -1,5 +1,5 @@
 
-{release, {emqttd, "2.3.0"}, [
+{release, {emqttd, "2.3.1"}, [
   sasl,
   asn1,
   syntax_tools,
@@ -38,7 +38,7 @@
   {emq_dashboard, load},
   {emq_web_hook, load},
   {emq_lua_hook, load},
-  {emq_elixir_plugin, load},
+  %%{emq_elixir_plugin, load},
   {emq_auth_clientid, load},
   {emq_auth_username, load},
   {emq_auth_ldap, load},
