--- a/relx.config
+++ b/relx.config
@@ -1,10 +1,12 @@
 
-{release, {emqttd, "2.3.4"}, [
+{release, {emqttd, "2.3.5"}, [
+  kernel,
   sasl,
+  crypto,
+  public_key,
   asn1,
   syntax_tools,
   ssl,
-  crypto,
   xmerl,
   os_mon,
   inets,
