Add clique and remove pbkdf2, bcrypt, luerl and syslog

--- a/relx.config
+++ b/relx.config
@@ -16,14 +16,10 @@
   hipe,
   runtime_tools,
   {observer, load},
-  %%{wx, load},
-  %%pbkdf2,
-  %%bcrypt,
   lager,
-  %%luerl,
-  %%syslog,
   gproc,
   esockd,
+  clique,
   cuttlefish,
   jsx,
   mochiweb,
