Add emqx_dashboard emqx_management plugin

--- a/relx.config
+++ b/relx.config
@@ -22,13 +22,15 @@
   clique,
   cuttlefish,
   jsx,
-  mochiweb,
+  cowboy,
   emqx,
   {mnesia, load},
   {ekka, load},
   {emqx_recon, load},
   {emqx_retainer, load},
-  {emqx_reloader, load}
+  {emqx_reloader, load},
+  {emqx_dashboard, load},
+  {emqx_management, load}
 ]}.
 
 {include_src, false}.
