Add emqx_plugin_template project

--- a/relx.config
+++ b/relx.config
@@ -30,7 +30,8 @@
   {emqx_retainer, load},
   {emqx_reloader, load},
   {emqx_dashboard, load},
-  {emqx_management, load}
+  {emqx_management, load},
+  {emqx_plugin_template, load}
 ]}.
 
 {include_src, false}.
