--- a/.ci/centos6.8/Dockerfile
+++ b/.ci/centos6.8/Dockerfile
@@ -4,10 +4,9 @@ RUN yum update -y
 RUN yum install -y wget git zip
 RUN yum groupinstall -y "Development Tools"
 RUN wget https://packages.erlang-solutions.com/erlang-solutions-1.0-1.noarch.rpm -P /tmp
-RUN rpm -Uvh /tmp/erlang-solutions-1.0-1.noarch.rpm
 RUN yum install -y epel-release
-RUN yum install -y esl-erlang-20.0
-RUN mkdir -p /rebar && git clone https://github.com/rebar/rebar && cd /rebar && ./bootstrap && cp /rebar/rebar /usr/local/bin/ && rm -rf /rebar
+RUN rpm -Uvh /tmp/erlang-solutions-1.0-1.noarch.rpm
+RUN yum install -y esl-erlang
 RUN mkdir -p /root/.ssh/
 
 # cleanup
