--- a/vars.config
+++ b/vars.config
@@ -7,6 +7,7 @@
 {platform_etc_dir,  "/etc/emqx"}.
 {platform_lib_dir,  ""}.
 {platform_log_dir,  "/var/log/emqx"}.
+{platform_plugins_dir,  "/var/lib/emqx/plugins"}.
 
 %%
 %% bin/emqx
