Add emqx_lua_hook plugins

--- a/relx.config
+++ b/relx.config
@@ -17,6 +17,7 @@
   {observer, load},
   lager,
   gproc,
+  luerl,
   esockd,
   clique,
   cuttlefish,
@@ -40,6 +41,7 @@
   {emqx_dashboard, load},
   {emqx_delayed_publish, load},
   {emqx_web_hook, load},
+  {emqx_lua_hook, load},
   {emqx_auth_clientid, load},
   {emqx_auth_username, load},
   {emqx_auth_ldap, load},
@@ -70,6 +72,7 @@
     {mkdir, "data/"},
     {mkdir, "data/mnesia"},
     {mkdir, "data/configs"},
+    {mkdir, "hook_lua"},
     {template, "bin/emqx_env", "bin/emqx_env"},
     {template, "bin/emqx", "bin/emqx"},
     {template, "bin/emqx_ctl", "bin/emqx_ctl"},
