Put RUNNER_ROOT_DIR logic to vars.config

--- a/vars.config
+++ b/vars.config
@@ -11,15 +11,12 @@
 
 %%
 %% bin/emqx
-%% 
-%% {runner_script_dir,  "$(cd ${0%/*} && pwd)"}.
-{runner_root_dir,        "/lib/emqx"}.
-{runner_root_dir_for_64, "/lib64/emqx"}.
-{runner_base_dir,        ""}.
-{runner_bin_dir,         "/usr/sbin"}.
-{runner_etc_dir,         "/etc/emqx"}.
-{runner_lib_dir,         "$RUNNER_ROOT_DIR/lib"}.
-{runner_log_dir,         "/var/log/emqx"}.
-{runner_data_dir,        "/var/lib/emqx"}.
-{pipe_dir,               "/tmp/$RUNNER_SCRIPT/"}.
-{runner_user,            ""}.
+%%
+{runner_root_dir, "$(test -d /usr/lib64 && echo /usr/lib64 || echo /usr/lib)/emqx"}.
+{runner_bin_dir,  "/usr/sbin"}.
+{runner_etc_dir,  "/etc/emqx"}.
+{runner_lib_dir,  "$RUNNER_ROOT_DIR/lib"}.
+{runner_log_dir,  "/var/log/emqx"}.
+{runner_data_dir, "/var/lib/emqx"}.
+{pipe_dir,        "/tmp/$RUNNER_SCRIPT/"}.
+{runner_user,     "emqx"}.
