--- a/relx.config
+++ b/relx.config
@@ -61,7 +61,8 @@
 
 {vm_args, false}.
 
-{overlay_vars, "vars.config"}.
+%{overlay_vars, "vars.config"}.
+{overlay_vars, "./package-vars.config"}.
 
 {overlay, [
     {mkdir, "etc/"},
