--- a/vars.config
+++ b/vars.config
@@ -2,21 +2,24 @@
 %% ex: ft=erlang ts=4 sw=4 et
 
 %% Platform-specific installation paths
-{platform_bin_dir,  ""}.
-{platform_data_dir, "/var/lib/emqx"}.
-{platform_etc_dir,  "/etc/emqx"}.
-{platform_lib_dir,  ""}.
-{platform_log_dir,  "/var/log/emqx"}.
-{platform_plugins_dir,  "/var/lib/emqx/plugins"}.
+{platform_bin_dir,  "bin"}.
+{platform_data_dir, "data"}.
+{platform_etc_dir,  "etc"}.
+{platform_lib_dir,  "lib"}.
+{platform_log_dir,  "log"}.
+{platform_plugins_dir,  "plugins"}.
 
 %%
 %% bin/emqx
-%%
-{runner_root_dir, "$(test -d /usr/lib64 && echo /usr/lib64 || echo /usr/lib)/emqx"}.
-{runner_bin_dir,  "/usr/sbin"}.
-{runner_etc_dir,  "/etc/emqx"}.
-{runner_lib_dir,  "$RUNNER_ROOT_DIR/lib"}.
-{runner_log_dir,  "/var/log/emqx"}.
-{runner_data_dir, "/var/lib/emqx"}.
-{pipe_dir,        "/tmp/$RUNNER_SCRIPT/"}.
-{runner_user,     "emqx"}.
+%% 
+%% {runner_script_dir,  "$(cd ${0%/*} && pwd)"}.
+{runner_root_dir,    ""}.
+{runner_base_dir,    ""}.
+{runner_bin_dir,     "$RUNNER_ROOT_DIR/bin"}.
+{runner_etc_dir,     "$RUNNER_ROOT_DIR/etc"}.
+{runner_lib_dir,     "$RUNNER_ROOT_DIR/lib"}.
+{runner_log_dir,     "$RUNNER_ROOT_DIR/log"}.
+{runner_data_dir,    "$RUNNER_ROOT_DIR/data"}.
+{pipe_dir,           "/tmp/$RUNNER_SCRIPT/"}.
+{runner_user,        ""}.
+
