Parameterise release profile

--- a/relx.config
+++ b/relx.config
@@ -61,8 +61,7 @@
 
 {vm_args, false}.
 
-%{overlay_vars, "vars.config"}.
-{overlay_vars, "./package-vars.config"}.
+{overlay_vars, "vars.config"}.
 
 {overlay, [
     {mkdir, "etc/"},
