Workaround cuttlefish escape

--- a/vars-pkg.config
+++ b/vars-pkg.config
@@ -12,7 +12,7 @@
 %%
 %% bin/emqx
 %%
-{runner_root_dir, "$(cd /usr/lib64 2>/dev/null || cd /usr/lib; pwd)/emqx"}.
+{runner_root_dir, "$(if [ -d /usr/lib64 ]; then echo /usr/lib64; else echo /usr/lib; fi)/emqx"}.
 {runner_bin_dir,  "/usr/sbin"}.
 {runner_etc_dir,  "/etc/emqx"}.
 {runner_lib_dir,  "$RUNNER_ROOT_DIR/lib"}.
