Build with cuttlefish
We used to commit the cuttlefish binary directly into the git, but this way we have to update the binary every time the cuttlefish has code changes.

In this commit I removed the cuttlefish binary from the repo. When
buiding the project, the new built binary will be copied to the release directory.

--- a/relx.config
+++ b/relx.config
@@ -83,10 +83,10 @@
     {template, "rel/conf/plugins/emqx_lwm2m.conf", "etc/plugins/emqx_lwm2m.conf"},
     {copy, "rel/conf/acl.conf", "etc/acl.conf"},
     {copy, "data/loaded_plugins", "data/loaded_plugins"},
-    {copy, "bin/cuttlefish", "bin/cuttlefish"},
     {copy, "bin/nodetool", "bin/nodetool"},
     {copy, "rel/schema", "releases/\{\{rel_vsn\}\}/"},
     {copy, "bin/install_upgrade_escript", "bin/install_upgrade_escript"},
+    {copy, "deps/cuttlefish/cuttlefish", "bin/"},
     {copy, "deps/emqx_lwm2m/lwm2m_xml", "etc/"}
 ]}.
 
