--- a/vars-pkg.config
+++ b/vars-pkg.config
@@ -13,7 +13,7 @@
 %% bin/emqx
 %%
 {runner_root_dir, "$(if [ -d /usr/lib64 ]; then echo /usr/lib64; else echo /usr/lib; fi)/emqx"}.
-{runner_bin_dir,  "/usr/sbin"}.
+{runner_bin_dir,  "/usr/bin"}.
 {runner_etc_dir,  "/etc/emqx"}.
 {runner_lib_dir,  "$RUNNER_ROOT_DIR/lib"}.
 {runner_log_dir,  "/var/log/emqx"}.
