Add curl to Dockerfile

--- a/.ci/centos6.8/Dockerfile
+++ b/.ci/centos6.8/Dockerfile
@@ -1,7 +1,7 @@
 FROM centos:6.8
 
 RUN yum update -y
-RUN yum install -y wget git zip
+RUN yum install -y wget git zip curl
 RUN yum groupinstall -y "Development Tools"
 RUN wget https://packages.erlang-solutions.com/erlang-solutions-1.0-1.noarch.rpm -P /tmp
 RUN yum install -y epel-release
@@ -13,9 +13,13 @@ RUN mkdir -p /root/.ssh/
 RUN yum clean packages \
  && rm -rf /tmp/* /var/tmp/*
 
-ADD ./files/id_rsa /root/.ssh/
-ADD ./files/id_rsa.pub /root/.ssh/
+ADD ~/.ssh/id_rsa /root/.ssh/
+ADD ~/.ssh/id_rsa /root/.ssh/
+#ADD ./files/id_rsa /root/.ssh/
+#ADD ./files/id_rsa.pub /root/.ssh/
 ADD ./files/config /root/.ssh/
 ADD ./files/emqx_ci.sh /
+ADD ./files/emqx_nightly_ci.sh / 
+ADD ./files/emqx_release_ci.sh /
 
 CMD ["/emqx_ci.sh"]
