--- a/.ci/ubuntu14.04/Dockerfile
+++ b/.ci/ubuntu14.04/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:14.04
 
 RUN apt-get update
-RUN apt-get install -y wget git zip
+RUN apt-get install -y wget git zip curl
 RUN echo >> deb http://security.ubuntu.com/ubuntu precise-security main /etc/apt/sources.list
 RUN apt-get update
 RUN apt-get install -y build-essential debhelper
@@ -13,9 +13,13 @@ RUN mkdir -p /root/.ssh/
 RUN apt-get clean\
  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-ADD ./files/id_rsa /root/.ssh/
-ADD ./files/id_rsa.pub /root/.ssh/
+ADD ~/.ssh/id_rsa /root/.ssh/
+ADD ~/.ssh/id_rsa /root/.ssh/
+#ADD ./files/id_rsa /root/.ssh/
+#ADD ./files/id_rsa.pub /root/.ssh/
 ADD ./files/config /root/.ssh/
 ADD ./files/emqx_ci.sh /
+ADD ./files/emqx_nightly_ci.sh / 
+ADD ./files/emqx_release_ci.sh /
 
 CMD ["/emqx_ci.sh"]
