--- a/.ci/ubuntu16.04/Dockerfile
+++ b/.ci/ubuntu16.04/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:16.04
 
 RUN apt-get update
-RUN apt-get install -y wget git zip
+RUN apt-get install -y wget git zip curl
 RUN apt-get update
 RUN apt-get install -y build-essential debhelper
 RUN wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_21.0.5-1~ubuntu~trusty_amd64.deb -O /tmp/erlang.deb
@@ -12,9 +12,13 @@ RUN mkdir -p /root/.ssh/
 RUN apt-get clean\
  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-ADD ./files/id_rsa /root/.ssh/
-ADD ./files/id_rsa.pub /root/.ssh/
+ADD ~/.ssh/id_rsa /root/.ssh/
+ADD ~/.ssh/id_rsa /root/.ssh/
+#ADD ./files/id_rsa /root/.ssh/
+#ADD ./files/id_rsa.pub /root/.ssh/
 ADD ./files/config /root/.ssh/
 ADD ./files/emqx_ci.sh /
+ADD ./files/emqx_nightly_ci.sh / 
+ADD ./files/emqx_release_ci.sh /
 
 CMD ["/emqx_ci.sh"]
