Fix deb build failed on AWS

--- a/.ci/debian7/Dockerfile
+++ b/.ci/debian7/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:7
 
-RUN apt-get update
-RUN apt-get install -y wget git zip  build-essential debhelper libncurses5-dev unixodbc unixodbc-dev openjdk-7-jdk libssl-dev curl
+RUN apt-get update \
+    && apt-get install -y wget git zip  build-essential debhelper libncurses5-dev unixodbc unixodbc-dev openjdk-7-jdk libssl-dev curl
 RUN wget http://erlang.org/download/otp_src_21.0.tar.gz &&  tar zxvf otp_src_21.0.tar.gz && cd otp_src_21.0 && ./configure && make && make install
 RUN mkdir -p /root/.ssh/
 # cleanup
@@ -14,5 +14,7 @@ ADD ./files/config /root/.ssh/
 ADD ./files/emqx_ci.sh /
 ADD ./files/emqx_nightly_ci.sh / 
 ADD ./files/emqx_release_ci.sh /
+
+RUN chmod +x /emqx_ci.sh /emqx_nightly_ci.sh /emqx_release_ci.sh
 
 CMD ["/emqx_ci.sh"]
