Add install test

--- a/.ci/debian9/Dockerfile
+++ b/.ci/debian9/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:9
 
 RUN apt-get update \ 
-    && apt-get install -y wget git zip  build-essential debhelper curl
+    && apt-get install -y wget git zip  build-essential debhelper curl unzip
 RUN wget http://packages.erlang-solutions.com/erlang/esl-erlang/FLAVOUR_1_general/esl-erlang_21.0.5-1~debian~stretch_amd64.deb -O /tmp/erlang.deb
 RUN dpkg -i /tmp/erlang.deb || true
 RUN apt-get -f install -y
@@ -16,7 +16,8 @@ ADD ./files/config /root/.ssh/
 ADD ./files/emqx_ci.sh /
 ADD ./files/emqx_nightly_ci.sh / 
 ADD ./files/emqx_release_ci.sh /
+ADD ./files/emqx_install_test.sh /
 
-RUN chmod +x /emqx_ci.sh /emqx_nightly_ci.sh /emqx_release_ci.sh
+RUN chmod +x /emqx_ci.sh /emqx_nightly_ci.sh /emqx_release_ci.sh /emqx_install_test
 
 CMD ["/emqx_ci.sh"]
