--- a/.ci/centos6.8/Dockerfile
+++ b/.ci/centos6.8/Dockerfile
@@ -18,10 +18,8 @@ ADD ./files/id_rsa /root/.ssh/
 ADD ./files/id_rsa.pub /root/.ssh/
 ADD ./files/config /root/.ssh/
 ADD ./files/emqx_ci.sh /
-ADD ./files/emqx_nightly_ci.sh / 
-ADD ./files/emqx_release_ci.sh /
 ADD ./files/emqx_install_test.sh /
 
-RUN chmod +x /emqx_ci.sh /emqx_nightly_ci.sh /emqx_release_ci.sh /emqx_install_test.sh
+RUN chmod +x /emqx_ci.sh /emqx_install_test.sh
 
-CMD ["/emqx_ci.sh"]
+CMD ["/bin/bash", "-c", "source /emqx_ci.sh"]
