--- a/relx.config
+++ b/relx.config
@@ -78,10 +78,10 @@
     {copy, "rel/conf/plugins", "etc/"},
     {copy, "deps/emqx/etc/certs", "etc/"},
     {template, "rel/conf/emqx.conf", "etc/emqx.conf"},
+    {template, "rel/conf/vm.args", "etc/vm.args"},
     {template, "rel/conf/ssl_dist.conf", "etc/ssl_dist.conf"},
     {template, "rel/conf/plugins/emqx_coap.conf", "etc/plugins/emqx_coap.conf"},
     {template, "rel/conf/plugins/emqx_lwm2m.conf", "etc/plugins/emqx_lwm2m.conf"},
-    {template, "vm.args", "etc/vm.args"},
     {copy, "rel/conf/acl.conf", "etc/acl.conf"},
     {copy, "data/loaded_plugins", "data/loaded_plugins"},
     {copy, "bin/nodetool", "bin/nodetool"},
