--- a/.ci/ubuntu14.04/Dockerfile
+++ b/.ci/ubuntu14.04/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update \
 RUN echo >> deb http://security.ubuntu.com/ubuntu precise-security main /etc/apt/sources.list
 RUN apt-get update \
     && apt-get install -y build-essential debhelper
-RUN wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_21.0.5-1~ubuntu~trusty_amd64.deb -O /tmp/erlang.deb
+RUN wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_21.2-1~ubuntu~trusty_amd64.deb -O /tmp/erlang.deb
 RUN dpkg -i /tmp/erlang.deb || true
 RUN apt-get -f install -y
 RUN mkdir -p /root/.ssh/
