--- a/.ci/centos7/Dockerfile
+++ b/.ci/centos7/Dockerfile
@@ -3,10 +3,9 @@ FROM centos:7
 RUN yum update -y
 RUN yum install -y wget git zip which curl unzip
 RUN yum groupinstall -y "Development Tools"
-RUN wget https://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_21.2-1~centos~7_amd64.rpm -P /tmp
+RUN wget https://packages.erlang-solutions.com/erlang-solutions-1.0-1.noarch.rpm -P /tmp
 RUN yum install -y epel-release
-RUN yum install unixODBC unixODBC-devel wxBase wxGTK SDL wxGTK-gl -y
-RUN rpm -Uvh /tmp/esl-erlang_21.2-1~centos~7_amd64.rpm
+RUN rpm -Uvh /tmp/erlang-solutions-1.0-1.noarch.rpm
 RUN yum install -y esl-erlang
 RUN mkdir -p /root/.ssh/
 
