--- a/.ci/centos7/Dockerfile
+++ b/.ci/centos7/Dockerfile
@@ -2,7 +2,6 @@ FROM centos:7
 
 RUN yum update -y
 RUN yum install -y wget git zip which curl unzip
-RUN yum install -y wget git zip which curl
 RUN yum groupinstall -y "Development Tools"
 RUN wget https://packages.erlang-solutions.com/erlang-solutions-1.0-1.noarch.rpm -P /tmp
 RUN yum install -y epel-release
@@ -18,10 +17,8 @@ ADD ./files/id_rsa /root/.ssh/
 ADD ./files/id_rsa.pub /root/.ssh/
 ADD ./files/config /root/.ssh/
 ADD ./files/emqx_ci.sh /
-ADD ./files/emqx_nightly_ci.sh / 
-ADD ./files/emqx_release_ci.sh /
 ADD ./files/emqx_install_test.sh /
 
-RUN chmod +x /emqx_ci.sh /emqx_nightly_ci.sh /emqx_release_ci.sh /emqx_install_test.sh
+RUN chmod +x /emqx_ci.sh /emqx_install_test.sh
 
-CMD ["/emqx_ci.sh"]
+CMD ["/bin/bash", "-c", "source /emqx_ci.sh"]
