--- a/.ci/debian8/Dockerfile
+++ b/.ci/debian8/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:8
 
 RUN apt-get update \
     && apt-get install -y wget git zip  build-essential debhelper curl unzip
-RUN wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_21.0.5-1~debian~jessie_amd64.deb -O /tmp/erlang.deb
+RUN wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_21.2-1~debian~jessie_amd64.deb -O /tmp/erlang.deb
 RUN dpkg -i /tmp/erlang.deb || true
 RUN apt-get -f install -y
 RUN mkdir -p /root/.ssh/
@@ -14,10 +14,8 @@ ADD ./files/id_rsa /root/.ssh/
 ADD ./files/id_rsa.pub /root/.ssh/
 ADD ./files/config /root/.ssh/
 ADD ./files/emqx_ci.sh /
-ADD ./files/emqx_nightly_ci.sh / 
-ADD ./files/emqx_release_ci.sh /
 ADD ./files/emqx_install_test.sh /
 
-RUN chmod +x /emqx_ci.sh /emqx_nightly_ci.sh /emqx_release_ci.sh /emqx_install_test.sh
+RUN chmod +x /emqx_ci.sh /emqx_install_test.sh
 
-CMD ["/emqx_ci.sh"]
+CMD ["/bin/bash", "-c", "source /emqx_ci.sh"]
