Create win30.1 branch

--- a/relx.config
+++ b/relx.config
@@ -85,7 +85,7 @@
     {copy, "bin/nodetool", "bin/nodetool"},
     {copy, "rel/schema", "releases/\{\{rel_vsn\}\}/"},
     {copy, "bin/install_upgrade_escript", "bin/install_upgrade_escript"},
-    {copy, "deps/cuttlefish/cuttlefish", "bin/"},
+    {copy, "bin/cuttlefish", "bin/cuttlefish"},
     {copy, "deps/emqx_lwm2m/lwm2m_xml", "etc/"}
 ]}.
 
