--- a/vars.config
+++ b/vars.config
@@ -11,8 +11,10 @@
 
 %%
 %% bin/emqx
-%%
-{runner_root_dir,    "$(cd $(dirname $(readlink $0 || echo $0))/..; pwd -P)"}.
+%% 
+%% {runner_script_dir,  "$(cd ${0%/*} && pwd)"}.
+{runner_root_dir,    ""}.
+{runner_base_dir,    ""}.
 {runner_bin_dir,     "$RUNNER_ROOT_DIR/bin"}.
 {runner_etc_dir,     "$RUNNER_ROOT_DIR/etc"}.
 {runner_lib_dir,     "$RUNNER_ROOT_DIR/lib"}.
