--- a/.ci/ubuntu16.04/Dockerfile
+++ b/.ci/ubuntu16.04/Dockerfile
@@ -1,12 +1,24 @@
 FROM ubuntu:16.04
 
-RUN apt-get update \
-    && apt-get install -y wget git zip curl unzip
+RUN apt-get update && apt-get install -y \
+    wget \
+    git \
+    zip \
+    curl \
+    unzip \
+    apt-transport-https \
+    ca-certificates \
+    software-properties-common
 RUN apt-get update \
     && apt-get install -y build-essential debhelper
 RUN wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_21.2-1~ubuntu~xenial_amd64.deb -O /tmp/erlang.deb
 RUN dpkg -i /tmp/erlang.deb || true
 RUN apt-get -f install -y
+RUN add-apt-repository ppa:jonathonf/python-3.6 -y \
+    && apt-get update \
+    && apt-get install python3.6 -y \
+    && rm -rf /usr/bin/python3 \
+    && ln -s /usr/bin/python3.6 /usr/bin/python3
 RUN mkdir -p /root/.ssh/
 # cleanup
 RUN apt-get clean\
