--- a/.ci/centos7/Dockerfile
+++ b/.ci/centos7/Dockerfile
@@ -7,6 +7,13 @@ RUN wget https://packages.erlang-solutions.com/erlang-solutions-1.0-1.noarch.rpm
 RUN yum install -y epel-release
 RUN rpm -Uvh /tmp/erlang-solutions-1.0-1.noarch.rpm
 RUN yum install -y esl-erlang
+RUN yum install -y zlib* \
+    && wget https://www.python.org/ftp/python/3.6.7/Python-3.6.7.tgz \
+    && tar xvf Python-3.6.7.tgz && cd Python-3.6.7 \
+    && ./configure --prefix=/usr/local/python3.6.7 \
+    && make \
+    && make install \
+    && rm -rf /usr/bin/python3 && ln -s /usr/local/python3.6.7/bin/python3.6 /usr/bin/python3
 RUN mkdir -p /root/.ssh/
 
 # cleanup
