--- a/.ci/ubuntu12.04/Dockerfile
+++ b/.ci/ubuntu12.04/Dockerfile
@@ -1,10 +1,31 @@
 FROM ubuntu:12.04
 
-RUN apt-get update \
-    &&apt-get install -y wget make g++ zip libncurses5-dev unixodbc unixodbc-dev openjdk-7-jdk libssl-dev build-essential curl debhelper python-software-properties unzip
+RUN apt-get update && apt-get install -y \
+    wget \
+    make \
+    g++ \
+    zip \
+    libncurses5-dev \
+    unixodbc \
+    unixodbc-dev \
+    openjdk-7-jdk \
+    libssl-dev \
+    build-essential \
+    curl \
+    debhelper \
+    python-software-properties \
+    unzip
 RUN add-apt-repository -y ppa:git-core/ppa && apt-get update && apt-get install -y git
 RUN echo >> deb http://security.ubuntu.com/ubuntu precise-security main /etc/apt/sources.list
 RUN wget http://erlang.org/download/otp_src_21.2.tar.gz &&  tar zxvf otp_src_21.2.tar.gz && cd otp_src_21.2 && ./configure && make && make install
+RUN wget https://www.python.org/ftp/python/3.6.7/Python-3.6.7.tgz \
+    && tar xvf Python-3.6.7.tgz \
+    && cd Python-3.6.7 \
+    && ./configure --prefix=/usr/local/python3.6.7 \
+    && make \
+    && make install \
+    && rm -rf /usr/bin/python3 \
+    && ln -s /usr/local/python3.6.7/bin/python3.6 /usr/bin/python3
 RUN mkdir -p /root/.ssh/
 # cleanup
 RUN apt-get clean\
